Same as last commit

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -205,7 +205,7 @@
 
 \section{Special functions}
 
-% todo: Euler's Gamma function, elliptic Gamma function, hyperbolic Gamma function, Barnes' double-Gamma function, multiple sine, Upsilon, Dedekind eta function, Jacobi theta functions,
+% todo: Euler's Gamma function, elliptic Gamma function, hyperbolic Gamma function, Barnes' double-Gamma function, multiple sine, Upsilon, Jacobi theta functions,
 
 \paragraph{Multiple gamma function.}  For $a_i\in\CC$ with $\Re a_i>0$,
 $\Gamma_N(x|\vec{a})=\prod_{\vec{n}}^{\text{reg.}}(x+\vec{n}\cdot\vec{a})^{-1}=\exp(\partial_s\sum_{\vec{n}}(x+\vec{n}\cdot\vec{a})^{-s}|_{s=0})$,
