Tweak Real-simple-Lie-algebras paragraph

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -362,12 +362,12 @@ The $12$-element Weyl group is the dihedral group~$D_6$, and $\{d_i\}=\{2,6\}$.
 \end{description}
 The Coxeter number $h(\lie{G})=(\dim\lie{G}/\rank\lie{G})-1$ is the largest~$d_i$.  A Coxeter element is the product of all simple reflections, in any order.  Its eigenvalues $\E^{2\pi\I(d_i-1)/h}$ come in conjugate pairs.
 
-\paragraph[Real simple Lie algebras]{A real simple Lie algebra} can be the complex algebras above or their real forms.
+\paragraph[Real simple Lie algebras]{A real simple Lie algebra} is a complex algebra (see above) or a real form thereof.
 Let
+$\lie{sp}(m,n)=\lie{usp}(2m,2n)=\lie{u}(m,n,\HH)$,
 $\lie{su}^*(2n)=\lie{gl}(n,\HH)/\RR$,
-$\lie{so}^*(2n)=\lie{o}(n,\HH)$,
-$\lie{sp}(m,n)=\lie{usp}(2m,2n)=\lie{u}(m,n,\HH)$.
-A Lie algebra is compact if it exponentiates to a compact Lie group.
+$\lie{so}^*(2n)=\lie{o}(n,\HH)$.
+A Lie algebra is called compact if it exponentiates to a compact Lie group.
 In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})$ generators.
 \begin{tab}{@{}c@{ }lll}
 & Real form & \hspace{-1em}Max compact subalgebra & Range \\
@@ -515,7 +515,7 @@ of singularities with no moduli (Arnold) hence of $\Nsusy=2$ minimal models ($c<
 of $\Nsusy=0$ unitary minimal models ($c<1$),
 of quivers of finite type,\ldots{}
 \begin{tab}{*{3}{>{$}l<{$}}}\label{page:ADE-polynomial}
-  \lie{G} & (p,q,r) & \multicolumn{1}{p{3cm}}{Kleinian polynomial} \\
+  \lie{G} & (p,q,r) & \text{Kleinian polynomial} \\
   \lie{A}_k & (1,q,1+k-q) & w^2+x^2+y^{k+1} \\
   \lie{D}_k & (2,2,k-2) & w^2+x^2y+y^{k-1} \\
   \lie{E}_6 & (2,3,3) & w^2+x^3+y^4 \\
