Reorder sections on Lie algebras/groups/superalgebras/supergroups

--- a/Tables-for-susy.tex
+++ b/Tables-for-susy.tex
@@ -82,7 +82,8 @@
 \cs_set:Npn \__my_rest_words:w #1 ~ #2 \q_stop { \exp_not:n {#2} }
 \cs_set_protected:Npn \__my_strip_punct:nn #1#2
   {
-    \tl_if_in:nnT { . : , ; } {#1}
+    \str_case:nnT {#1}
+      { { . } { } { : } { } { , } { } { ; } { } }
       {
         \cs_set_protected:Npn \__my_strip:w ##1 #1 \q_nil
           { \tl_set:Nn \l__my_title_tl {##1} }
@@ -300,7 +301,7 @@ and $\Gamma(z;0,q)=1/(z;q)_\infty$.
 
 \section[Lie algebras and groups]{Lie algebras and groups (dimension${}<\infty$)}
 
-\subsection{Simple Lie (super)algebras}
+\subsection{Simple Lie algebras}
 
 \paragraph{Complex simple Lie algebras.}
 Infinite series $\lie{A}_{n\geq 1}$, $\lie{B}_{n\geq 1}$, $\lie{C}_{n\geq 1}$, $\lie{D}_{n\geq 2}$ with
@@ -445,6 +446,74 @@ In $\lie{E}_{r(s)}$, $s$ is the number of $(\text{non-compact})-(\text{compact})
 \end{minipage}
 \end{center}
 
+\paragraph{ADE classification}
+of symmetric matrices with eigenvalues in $(-2,2)$ and $\ZZ_{\geq 0}$ entries (adjacency matrices of ADE diagrams),
+of simply laced simple Lie algebras,
+of binary polyhedral groups~$\Gamma$ (discrete subgroups of $\Lie{SU}(2)$) and du~Val singularities $\CC^2/\Gamma\simeq$(zeros of Kleinian polynomial),
+of integers $1\leq p\leq q\leq r$ with $1/p+1/q+1/r>1$,
+of singularities with no moduli (Arnold) hence of $\Nsusy=2$ minimal models ($c<3$),
+of $\Nsusy=0$ unitary minimal models ($c<1$),
+of quivers of finite type,\ldots{}
+\begin{tab}{*{3}{>{$}l<{$}}}\label{page:ADE-polynomial}
+  \lie{G} & (p,q,r) & \text{Kleinian polynomial} \\
+  \lie{A}_k & (1,q,1+k-q) & w^2+x^2+y^{k+1} \\
+  \lie{D}_k & (2,2,k-2) & w^2+x^2y+y^{k-1} \\
+  \lie{E}_6 & (2,3,3) & w^2+x^3+y^4 \\
+  \lie{E}_7 & (2,3,4) & w^2+x^3+xy^3 \\
+  \lie{E}_8 & (2,3,5) & w^2+x^3+y^5 \\
+\end{tab}
+
+\subsection{Lie groups}
+
+% todo: say Lie subgroups can be horrible, such as irrational line in $T^2$
+
+% todo: Name "\Lie{USp}(2n)=\Lie{Sp}(n)" the compact symplectic group
+
+% todo: Ph. Spindel, A. Sevrin, W. Troost, A. Van Proeyen (1988), D. Joyce (1992) construct (all) left-invariant hypercomplex structures on (simply-connected?) compact (reductive?) Lie groups: any simple Lie groups become ``left-invariantly hypercomplex'' once multiplied by an appropriate torus.
+
+\paragraph{Basics.}  The identity component~$G_0$ is a normal subgroup: $G/G_0$ is the group of components.  The maximal compact subgroup~$K$ is unique up to conjugation.
+
+Every compact connected Lie group~$K$ is a quotient of $\Lie{U}(1)^n\times\prod_{i=1}^m K_i$ by a finite subgroup of its center, where~$K_i$ are simple, compact, simply-connected, connected Lie groups.
+
+\paragraph{Homotopy.} Any connected Lie group is homeomorphic to its maximal compact subgroup~$K$ times a Euclidean space~$\RR^p$.
+All $\pi_{j\geq 1}(K)$ are abelian and finitely generated, $\pi_2(K)=0$, $\pi_3(K)=\ZZ^m$ where $m$~counts simple factors in a finite cover $\Lie{U}(1)^n\times\prod_{i=1}^m K_i\twoheadrightarrow K$, and $\pi_j(K)=\prod_{i=1}^m\pi_j(K_i)$ for $j\geq 2$.
+
+
+For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2d_i-1}\to G$ which induces isomorphisms of rational (\ie, torsion-free part of) homotopy/\allowbreak cohomology groups where $d_i$~are the degrees of fundamental invariants.  For compact simple~$K$,
+\begin{center}
+\vspace{-1.3\baselineskip}
+\begin{minipage}[t]{.5\linewidth}%
+\begin{tab}{@{}>{$}l<{$}@{ }>{$}l<{$}@{}}
+  \text{Group} & (2d_i-1) \\\midrule
+  \Lie{A}_n & 3,5,\ldots,2n+1\\
+  \Lie{B}_n,\Lie{C}_n & 3,7,\ldots,4n-1\\
+  \Lie{D}_n & 3,7,\ldots,4n-5,2n-1\\
+\end{tab}
+\end{minipage}%
+\begin{minipage}[t]{.5\linewidth}
+\begin{tab}{@{}>{$}l<{$}@{ }>{$}l<{$}@{}}
+  \Lie{E}_6 & 3,9,11,15,17,23\\
+  \Lie{E}_7 & 3,11,15,19,23,27,35\\
+  \Lie{E}_8 & 3,15,23,27,35,39,47,59\\
+  \Lie{F}_4 & 3,11,15,23\\
+  \Lie{G}_2 & 3,11\\
+\end{tab}
+\end{minipage}
+\end{center}
+\vspace{-.6\baselineskip}
+$\pi_{j\geq 2}(G)$ has a factor~$\ZZ$ for each~$S^j$ above, and some torsion.
+Explicitly, $\pi_j(\Lie{SU}(n))$ is $\ZZ$~for odd~$j<2n$, $0$~for even~$j<2n$, and is pure torsion for $j\geq 2n$.
+Similarly, for $j<4n+2$, $\pi_j(\Lie{USp}(2n))$ is $\ZZ$~for $j\equiv 3,7\bmod{8}$, $\ZZ_2$~for $j\equiv 4,5\bmod{8}$, and $0$~otherwise.
+
+% http://www.maths.ed.ac.uk/~aar/surgery/uicc/mimura.pdf claims the table is the "well-known Hopf theorem"
+% See Abanov's http://felix.physics.sunysb.edu/~abanov/Teaching/Spring2009/Notes/abanov-cpA1-upload.pdf
+
+% todo: say somewhere $SU(2)$ is $S^3$.
+
+% todo: fundamental groups.  Include $\pi_1(\Lie{U}(n))=\ZZ$.
+
+\subsection{Simple Lie superalgebras}
+
 \paragraph{Classical Lie superalgebras:}
 the bosonic algebra acts on the fermionic generators in a completely reducible representation.
 This excludes Cartan-type superalgebras $\lie{W}(n)$, $\lie{S}(n)$, $\lie{\tilde S}(n)$ and $\lie{H}(n)$.
@@ -506,71 +575,7 @@ and $\lie{D}^p(2,1,\alpha=1)=\lie{osp}(4-p,p|2)$
 and $\lie{osp}(6,2|4)=\lie{osp}^*(8|4)$.
 % todo: complete this list
 
-\paragraph{ADE classification}
-of symmetric matrices with eigenvalues in $(-2,2)$ and $\ZZ_{\geq 0}$ entries (adjacency matrices of ADE diagrams),
-of simply laced simple Lie algebras,
-of binary polyhedral groups~$\Gamma$ (discrete subgroups of $\Lie{SU}(2)$) and du~Val singularities $\CC^2/\Gamma\simeq$(zeros of Kleinian polynomial),
-of integers $1\leq p\leq q\leq r$ with $1/p+1/q+1/r>1$,
-of singularities with no moduli (Arnold) hence of $\Nsusy=2$ minimal models ($c<3$),
-of $\Nsusy=0$ unitary minimal models ($c<1$),
-of quivers of finite type,\ldots{}
-\begin{tab}{*{3}{>{$}l<{$}}}\label{page:ADE-polynomial}
-  \lie{G} & (p,q,r) & \text{Kleinian polynomial} \\
-  \lie{A}_k & (1,q,1+k-q) & w^2+x^2+y^{k+1} \\
-  \lie{D}_k & (2,2,k-2) & w^2+x^2y+y^{k-1} \\
-  \lie{E}_6 & (2,3,3) & w^2+x^3+y^4 \\
-  \lie{E}_7 & (2,3,4) & w^2+x^3+xy^3 \\
-  \lie{E}_8 & (2,3,5) & w^2+x^3+y^5 \\
-\end{tab}
-
-\subsection{Lie (super)groups}
-
-% todo: say Lie subgroups can be horrible, such as irrational line in $T^2$
-
-% todo: Name "\Lie{USp}(2n)=\Lie{Sp}(n)" the compact symplectic group
-
-% todo: Ph. Spindel, A. Sevrin, W. Troost, A. Van Proeyen (1988), D. Joyce (1992) construct (all) left-invariant hypercomplex structures on (simply-connected?) compact (reductive?) Lie groups: any simple Lie groups become ``left-invariantly hypercomplex'' once multiplied by an appropriate torus.
-
-\paragraph{Basics.}  The identity component~$G_0$ is a normal subgroup: $G/G_0$ is the group of components.  The maximal compact subgroup~$K$ is unique up to conjugation.
-
-Every compact connected Lie group~$K$ is a quotient of $\Lie{U}(1)^n\times\prod_{i=1}^m K_i$ by a finite subgroup of its center, where~$K_i$ are simple, compact, simply-connected, connected Lie groups.
-
-\paragraph{Homotopy.} Any connected Lie group is homeomorphic to its maximal compact subgroup~$K$ times a Euclidean space~$\RR^p$.
-All $\pi_{j\geq 1}(K)$ are abelian and finitely generated, $\pi_2(K)=0$, $\pi_3(K)=\ZZ^m$ where $m$~counts simple factors in a finite cover $\Lie{U}(1)^n\times\prod_{i=1}^m K_i\twoheadrightarrow K$, and $\pi_j(K)=\prod_{i=1}^m\pi_j(K_i)$ for $j\geq 2$.
-
-
-For any~$G$ there exists $\prod_{i=1}^{\rank G} S^{2d_i-1}\to G$ which induces isomorphisms of rational (\ie, torsion-free part of) homotopy/\allowbreak cohomology groups where $d_i$~are the degrees of fundamental invariants.  For compact simple~$K$,
-\begin{center}
-\vspace{-1.3\baselineskip}
-\begin{minipage}[t]{.5\linewidth}%
-\begin{tab}{@{}>{$}l<{$}@{ }>{$}l<{$}@{}}
-  \text{Group} & (2d_i-1) \\\midrule
-  \Lie{A}_n & 3,5,\ldots,2n+1\\
-  \Lie{B}_n,\Lie{C}_n & 3,7,\ldots,4n-1\\
-  \Lie{D}_n & 3,7,\ldots,4n-5,2n-1\\
-\end{tab}
-\end{minipage}%
-\begin{minipage}[t]{.5\linewidth}
-\begin{tab}{@{}>{$}l<{$}@{ }>{$}l<{$}@{}}
-  \Lie{E}_6 & 3,9,11,15,17,23\\
-  \Lie{E}_7 & 3,11,15,19,23,27,35\\
-  \Lie{E}_8 & 3,15,23,27,35,39,47,59\\
-  \Lie{F}_4 & 3,11,15,23\\
-  \Lie{G}_2 & 3,11\\
-\end{tab}
-\end{minipage}
-\end{center}
-\vspace{-.6\baselineskip}
-$\pi_{j\geq 2}(G)$ has a factor~$\ZZ$ for each~$S^j$ above, and some torsion.
-Explicitly, $\pi_j(\Lie{SU}(n))$ is $\ZZ$~for odd~$j<2n$, $0$~for even~$j<2n$, and is pure torsion for $j\geq 2n$.
-Similarly, for $j<4n+2$, $\pi_j(\Lie{USp}(2n))$ is $\ZZ$~for $j\equiv 3,7\bmod{8}$, $\ZZ_2$~for $j\equiv 4,5\bmod{8}$, and $0$~otherwise.
-
-% http://www.maths.ed.ac.uk/~aar/surgery/uicc/mimura.pdf claims the table is the "well-known Hopf theorem"
-% See Abanov's http://felix.physics.sunysb.edu/~abanov/Teaching/Spring2009/Notes/abanov-cpA1-upload.pdf
-
-% todo: say somewhere $SU(2)$ is $S^3$.
-
-% todo: fundamental groups.  Include $\pi_1(\Lie{U}(n))=\ZZ$.
+\subsection{Lie supergroups}
 
 \subsection{Representations of Lie (super)algebras/groups}
 
